[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scripts/PortalPair.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/Portal.tscn" type="PackedScene" id=2]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;
uniform sampler2D texture_albedo : source_color;

void vertex() {
}

void fragment() {
	vec2 base_uv = SCREEN_UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;
uniform sampler2D texture_albedo : source_color;

void vertex() {
}

void fragment() {
	vec2 base_uv = SCREEN_UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
}
"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )

[node name="PortalPair" type="Node3D"]
script = ExtResource( 1 )

[node name="PortalA" parent="." instance=ExtResource( 2 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Back" parent="PortalA/Screen" index="0"]
material_override = SubResource( 2 )

[node name="Left" parent="PortalA/Screen" index="1"]
material_override = SubResource( 2 )

[node name="Right" parent="PortalA/Screen" index="2"]
material_override = SubResource( 2 )

[node name="Bottom" parent="PortalA/Screen" index="3"]
material_override = SubResource( 2 )

[node name="Top" parent="PortalA/Screen" index="4"]
material_override = SubResource( 2 )

[node name="Camera3D" parent="PortalA/SubViewport" index="0"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="PortalB" parent="." instance=ExtResource( 2 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="Back" parent="PortalB/Screen" index="0"]
material_override = SubResource( 4 )

[node name="Left" parent="PortalB/Screen" index="1"]
material_override = SubResource( 4 )

[node name="Right" parent="PortalB/Screen" index="2"]
material_override = SubResource( 4 )

[node name="Bottom" parent="PortalB/Screen" index="3"]
material_override = SubResource( 4 )

[node name="Top" parent="PortalB/Screen" index="4"]
material_override = SubResource( 4 )

[node name="Camera3D" parent="PortalB/SubViewport" index="0"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0, 0 )

[node name="Area3D" parent="PortalB" index="3"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Border" parent="PortalB" index="4"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[connection signal="body_entered" from="PortalA/Area3D" to="." method="_on_portal_a_body_entered"]
[connection signal="body_exited" from="PortalA/Area3D" to="." method="_on_portal_a_body_exited"]
[connection signal="body_entered" from="PortalB/Area3D" to="." method="_on_portal_b_body_entered"]
[connection signal="body_exited" from="PortalB/Area3D" to="." method="_on_portal_b_body_exited"]

[editable path="PortalA"]
[editable path="PortalB"]
